Fix misaligned GH icon

--- a/public/stylesheets/blog.css
+++ b/public/stylesheets/blog.css
@@ -5,7 +5,6 @@
   --accent-rgb: 178,39,77;
   --low-opacity: 0.5;
   --high-opacity: 1.0;
-  /* --background-rgba: 252,247,247,1.0; */
   --background-rgba: 235,247,247,1.0;
 }
 
@@ -13,7 +12,6 @@ body {
   position: relative;
   font: 400 18px "Roboto", sans-serif;
   color: #0f0f0f;
-  background-color: rgb(237,225,234);
   letter-spacing: 1.2px;
   line-height: 1.6;
 }
@@ -93,6 +91,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
 footer ul {
   display: flex;
   flex-flow: row wrap;
@@ -104,10 +103,6 @@ footer li, {
   font-size: 21px;
   text-align: center;
   margin: 0 10px;
-}
-
-footer a {
-  margin: 0 50px;
 }
 
 a span {
@@ -136,7 +131,6 @@ span.text-emphasis {
 
 .index h2:first-of-type {
   margin-top: 25px;
-
 }
 
 .index ul {
@@ -181,13 +175,11 @@ img.topic-img-sm {
 
 #avatar {
   max-width: 18%;
-  border-top-left-radius: 100%;
-  border-top-right-radius: 100%;
-  border-bottom-left-radius: 100%;
-  border-bottom-right-radius: 100%;
+  border-radius: 100%;
 }
 
 footer a {
+  margin: 0 50px;
   color: rgba(var(--accent-rgb), 0.8);
   font-size: 2.0rem;
 }
@@ -204,7 +196,6 @@ svg.fa-file ~ span {
   padding-top: 15px;
 }
 
-
 .img-wrapper {
   margin-top: 50px;
 } 
@@ -213,11 +204,6 @@ svg.fa-file ~ span {
   text-align: center;
   font-size: .65rem;
   margin: 0;
-}
-
-p.license {
-  font-size: .65rem;
-  margin: 0 0 28px;
 }
 
 @media (min-width: 1400px) {
@@ -247,17 +233,22 @@ p.license {
   }
 }
 
+@media (max-width: 532px) and (min-width: 272px) {
+  footer li:nth-of-type(4) a {
+    position: relative;
+    left: 5px;
+  }
+}
+
 @media (max-width: 500px) {
   header {
     padding: 50px 0 20px;
-
   }
 
   main {
     margin-top: 0;
     margin-bottom: 125px;
   }
-
 
   #avatar {
     display: none;
